--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "babel-eslint": "^4.1.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
     "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-plugin-syntax-async-functions": "^6.1.18",
+    "babel-plugin-transform-async-to-module-method": "^6.1.18",
+    "babel-plugin-transform-regenerator": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-1": "^6.3.13",
     "eslint": "^1.9.0",
     "mocha": "2.0.1",
