--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "url": "https://github.com/taskcluster/taskcluster-lib-api.git"
   },
   "dependencies": {
-    "aws-sdk-promise": "0.0.2",
     "aws-sdk": "^2.1.21",
+    "aws-sdk-promise": "0.0.2",
     "babel-runtime": "^6.3.19",
     "body-parser": "1.13.3",
     "cryptiles": "^2.0.4",
@@ -34,8 +34,9 @@
     "taskcluster-client": "0.23.4",
     "taskcluster-lib-scopes": "^0.8.8",
     "taskcluster-lib-stats": "^0.8.7",
-    "uuid": "^2.0.1",
-    "type-is": "^1.6.10"
+    "taskcluster-lib-testing": "^0.9.2",
+    "type-is": "^1.6.10",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel-compile": "^1.0.0",
