--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   "devDependencies": {
     "babel-compile": "^2.0.0",
     "babel-preset-taskcluster": "^3.0.0",
-    "eslint": "^1.9.0",
-    "mocha": "2.0.1",
-    "source-map-support": "^0.4.2",
-    "taskcluster-lib-app": "^0.8.9",
-    "taskcluster-lib-config": "^0.8.8",
-    "taskcluster-lib-monitor": "^1.0.1",
+    "eslint": "^4.9.0",
+    "mocha": "4.0.1",
+    "source-map-support": "^0.5.0",
+    "taskcluster-lib-app": "^1.3.0",
+    "taskcluster-lib-monitor": "^4.6.3",
     "taskcluster-lib-testing": "^1.0.3",
-    "taskcluster-lib-validate": "^0.4.2"
+    "taskcluster-lib-validate": "^2.1.0",
+    "typed-env-config": "^1.1.1"
   },
   "main": "./lib/api.js"
 }
