--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "lodash": "^4.15.0",
     "promise": "^8.0.1",
     "slugid": "^1.1.0",
-    "superagent": "3.8.0",
-    "superagent-hawk": "0.0.6",
     "taskcluster-client": "^3.0.3",
     "taskcluster-lib-scopes": "^1.1.5",
     "type-is": "^1.6.15",
@@ -42,6 +40,8 @@
     "eslint-config-taskcluster": "^3.0.0",
     "mocha": "4.0.1",
     "source-map-support": "^0.5.0",
+    "superagent": "^3.8.0",
+    "superagent-hawk": "^0.0.6",
     "taskcluster-lib-app": "^1.3.1",
     "taskcluster-lib-monitor": "^4.6.3",
     "taskcluster-lib-testing": "^1.0.3",
