--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "lint": "eslint lib/*.js test/*.js",
-    "test": "mocha test/*_test.js"
+    "test": "DEBUG= mocha test/*_test.js | bunyan -o short"
   },
   "files": [
     "lib"
@@ -19,13 +19,13 @@
     "ajv": "^5.3.0",
     "aws-sdk": "^2.151.0",
     "body-parser": "1.18.2",
-    "debug": "^3.1.0",
     "express": "4.16.2",
     "hawk": "6.0.2",
     "lodash": "^4.15.0",
     "promise": "^8.0.1",
     "slugid": "^1.1.0",
     "taskcluster-client": "^3.1.0",
+    "taskcluster-lib-log": "^3.0.0",
     "taskcluster-lib-scopes": "^1.9.0",
     "type-is": "^1.6.15",
     "uuid": "^3.1.0"
