--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "taskcluster-lib-validate": "^3.1.0",
     "typed-env-config": "^1.1.1"
   },
+  "engines": {
+      "node" : ">=8"
+  },
   "main": "./src/api.js"
 }
